district summary complete

--- a/cleaning_student_names.ipynb
+++ b/cleaning_student_names.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "75b006b0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "fb0032a4",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "4e4ebfaa",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "19          80  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "f2ec572c",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
        " ...]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "16170d23",
    "metadata": {},
    "outputs": [
@@ -3327,13 +3327,7 @@
       "['Maria', 'Massey'] 2\n",
       "['Beverly', 'Burns'] 2\n",
       "['Jennifer', 'Buckley'] 2\n",
-      "['Christopher', 'Vaughn'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Christopher', 'Vaughn'] 2\n",
       "['Richard', 'Baker'] 2\n",
       "['Eric', 'Johnson'] 2\n",
       "['Jennifer', 'Anderson'] 2\n",
@@ -3655,7 +3649,13 @@
       "['Sandra', 'Garcia'] 2\n",
       "['Lori', 'Harris'] 2\n",
       "['Angela', 'Sanchez'] 2\n",
-      "['Jessica', 'Williams'] 2\n",
+      "['Jessica', 'Williams'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Patrick', 'Fisher'] 2\n",
       "['Richard', 'Wilson'] 2\n",
       "['David', 'Smith'] 2\n",
@@ -5825,13 +5825,7 @@
       "['Patricia', 'Oliver'] 2\n",
       "['Devon', 'Morris'] 2\n",
       "['Susan', 'Trujillo', 'MD'] 3\n",
-      "['Stephen', 'Thomas'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Stephen', 'Thomas'] 2\n",
       "['Zachary', 'Warren'] 2\n",
       "['Terri', 'Reilly'] 2\n",
       "['David', 'Miller'] 2\n",
@@ -6097,7 +6091,13 @@
       "['Jessica', 'Schmidt'] 2\n",
       "['James', 'Walter'] 2\n",
       "['Donald', 'Butler'] 2\n",
-      "['Daniel', 'Malone'] 2\n",
+      "['Daniel', 'Malone'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Kyle', 'Sellers'] 2\n",
       "['Derek', 'Wolfe'] 2\n",
       "['John', 'Gray'] 2\n",
@@ -8339,13 +8339,7 @@
       "['Teresa', 'Phillips'] 2\n",
       "['Matthew', 'Gregory'] 2\n",
       "['David', 'Stevenson'] 2\n",
-      "['Trevor', 'Clark'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Trevor', 'Clark'] 2\n",
       "['Christian', 'Young'] 2\n",
       "['Jonathan', 'Cole'] 2\n",
       "['Andrew', 'Wright'] 2\n",
@@ -8603,7 +8597,13 @@
       "['Joshua', 'Gonzalez'] 2\n",
       "['Zachary', 'King'] 2\n",
       "['Randy', 'Harris'] 2\n",
-      "['Amy', 'Fletcher'] 2\n",
+      "['Amy', 'Fletcher'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Robert', 'Marshall'] 2\n",
       "['Joseph', 'Gonzales'] 2\n",
       "['Jeffrey', 'Perry'] 2\n",
@@ -10845,13 +10845,7 @@
       "['Wendy', 'Morgan'] 2\n",
       "['William', 'Shea'] 2\n",
       "['Travis', 'Austin'] 2\n",
-      "['Charles', 'Beck'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Charles', 'Beck'] 2\n",
       "['Katie', 'Mcdonald'] 2\n",
       "['Carol', 'Kennedy'] 2\n",
       "['Paige', 'Bird'] 2\n",
@@ -11109,7 +11103,13 @@
       "['James', 'Bruce'] 2\n",
       "['Kristen', 'Robinson'] 2\n",
       "['Jonathan', 'Alvarez'] 2\n",
-      "['Raymond', 'Rivers'] 2\n",
+      "['Raymond', 'Rivers'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Melissa', 'Santos'] 2\n",
       "['Yolanda', 'Lopez'] 2\n",
       "['Jennifer', 'Morris'] 2\n",
@@ -13441,13 +13441,7 @@
       "['Richard', 'Shields'] 2\n",
       "['Susan', 'Beasley'] 2\n",
       "['Micheal', 'Ross'] 2\n",
-      "['Rhonda', 'Robertson'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Rhonda', 'Robertson'] 2\n",
       "['Mason', 'Hamilton'] 2\n",
       "['Sara', 'Smith'] 2\n",
       "['Dustin', 'Walker'] 2\n",
@@ -13660,7 +13654,13 @@
       "['Christine', 'Aguilar'] 2\n",
       "['Thomas', 'Prince'] 2\n",
       "['Kelly', 'Hernandez'] 2\n",
-      "['Evelyn', 'Kirby', 'MD'] 3\n",
+      "['Evelyn', 'Kirby', 'MD'] 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['David', 'Warren'] 2\n",
       "['Mark', 'Yang'] 2\n",
       "['Tonya', 'Myers'] 2\n",
@@ -16106,13 +16106,7 @@
       "['Luis', 'Mccormick'] 2\n",
       "['Beth', 'Mcdowell'] 2\n",
       "['Nicole', 'Singh'] 2\n",
-      "['Sarah', 'Hoffman'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Sarah', 'Hoffman'] 2\n",
       "['Tracey', 'Rasmussen'] 2\n",
       "['Robin', 'Schroeder'] 2\n",
       "['Elizabeth', 'Young'] 2\n",
@@ -16370,7 +16364,13 @@
       "['Ashley', 'Newton'] 2\n",
       "['Jennifer', 'Smith'] 2\n",
       "['Nicole', 'Williams'] 2\n",
-      "['Bryan', 'Arroyo'] 2\n",
+      "['Bryan', 'Arroyo'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Kevin', 'Taylor'] 2\n",
       "['Michael', 'Bridges'] 2\n",
       "['Mary', 'Obrien'] 2\n",
@@ -18862,13 +18862,7 @@
       "['Thomas', 'Weber'] 2\n",
       "['Anna', 'Jordan'] 2\n",
       "['Jacob', 'Fisher'] 2\n",
-      "['Kenneth', 'Thomas'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Kenneth', 'Thomas'] 2\n",
       "['Troy', 'Wall'] 2\n",
       "['Patricia', 'Rangel'] 2\n",
       "['Frank', 'Wolf'] 2\n",
@@ -18934,7 +18928,13 @@
       "['Michelle', 'Webster'] 2\n",
       "['Valerie', 'Hawkins'] 2\n",
       "['Mrs.', 'Lauren', 'Campbell'] 3\n",
-      "['Alexis', 'Williams'] 2\n",
+      "['Alexis', 'Williams'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Angela', 'Lindsey'] 2\n",
       "['Brittany', 'Patterson'] 2\n",
       "['Thomas', 'Aguilar'] 2\n",
@@ -21591,13 +21591,7 @@
       "['Brian', 'Howe'] 2\n",
       "['Donna', 'Rose'] 2\n",
       "['Andrew', 'Winters'] 2\n",
-      "['Christine', 'Anderson'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Christine', 'Anderson'] 2\n",
       "['Zachary', 'Daniel'] 2\n",
       "['Jessica', 'Hart'] 2\n",
       "['Chris', 'Mcmillan'] 2\n",
@@ -21632,7 +21626,13 @@
       "['Melissa', 'Davis'] 2\n",
       "['Jose', 'Schroeder'] 2\n",
       "['Ernest', 'Powell'] 2\n",
-      "['Jorge', 'Kennedy'] 2\n",
+      "['Jorge', 'Kennedy'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Misty', 'Simmons'] 2\n",
       "['Bianca', 'Park'] 2\n",
       "['Taylor', 'Green', 'DDS'] 3\n",
@@ -24373,13 +24373,7 @@
       "['Andrea', 'Hernandez'] 2\n",
       "['Alexis', 'Pruitt'] 2\n",
       "['Michael', 'Williams'] 2\n",
-      "['Christopher', 'Jackson'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Christopher', 'Jackson'] 2\n",
       "['Alyssa', 'York'] 2\n",
       "['Mary', 'Garcia'] 2\n",
       "['Laurie', 'Nelson'] 2\n",
@@ -24388,7 +24382,13 @@
       "['Molly', 'Stewart'] 2\n",
       "['Amy', 'Johnson'] 2\n",
       "['Michelle', 'Hughes'] 2\n",
-      "['John', 'Schroeder'] 2\n",
+      "['John', 'Schroeder'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Jonathan', 'Gonzalez'] 2\n",
       "['Jennifer', 'Johnson'] 2\n",
       "['Charles', 'Turner'] 2\n",
@@ -26930,7 +26930,13 @@
       "['Michael', 'Davenport'] 2\n",
       "['Heather', 'Bailey'] 2\n",
       "['Douglas', 'Singleton'] 2\n",
-      "['Jerome', 'Rose'] 2\n",
+      "['Jerome', 'Rose'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Catherine', 'Moss'] 2\n",
       "['Michelle', 'Burns'] 2\n",
       "['Melanie', 'Doyle'] 2\n",
@@ -27129,13 +27135,7 @@
       "['Veronica', 'Bowen'] 2\n",
       "['Jessica', 'Montoya'] 2\n",
       "['Deborah', 'Russell'] 2\n",
-      "['Amanda', 'Allen'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Amanda', 'Allen'] 2\n",
       "['Phillip', 'Brown'] 2\n",
       "['Jessica', 'Taylor'] 2\n",
       "['Jacob', 'Torres'] 2\n",
@@ -29643,7 +29643,13 @@
       "['William', 'Padilla'] 2\n",
       "['Valerie', 'Scott'] 2\n",
       "['Theresa', 'May'] 2\n",
-      "['Richard', 'Armstrong'] 2\n",
+      "['Richard', 'Armstrong'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Christopher', 'Mack'] 2\n",
       "['Lisa', 'Campbell'] 2\n",
       "['Jason', 'Conley'] 2\n",
@@ -29884,13 +29890,7 @@
       "['Casey', 'Young'] 2\n",
       "['Karen', 'Morris'] 2\n",
       "['Roger', 'Reynolds'] 2\n",
-      "['Hunter', 'Carter'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Hunter', 'Carter'] 2\n",
       "['Gregory', 'Parker'] 2\n",
       "['John', 'Cook'] 2\n",
       "['Kerry', 'Fitzgerald'] 2\n",
@@ -32399,7 +32399,13 @@
       "['Mr.', 'Bobby', 'Tucker'] 3\n",
       "['Jeffrey', 'Jackson'] 2\n",
       "['David', 'Davis'] 2\n",
-      "['Karina', 'Mitchell'] 2\n",
+      "['Karina', 'Mitchell'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Michael', 'Beltran'] 2\n",
       "['Michele', 'Byrd'] 2\n",
       "['Amy', 'Buchanan'] 2\n",
@@ -32641,13 +32647,7 @@
       "['Courtney', 'Jones'] 2\n",
       "['Brian', 'Vazquez'] 2\n",
       "['Elizabeth', 'Holder', 'PhD'] 3\n",
-      "['Elizabeth', 'Simon'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Elizabeth', 'Simon'] 2\n",
       "['Matthew', 'Armstrong'] 2\n",
       "['Amy', 'Henry'] 2\n",
       "['Anna', 'King'] 2\n",
@@ -35155,7 +35155,13 @@
       "['Cody', 'Walker'] 2\n",
       "['Carlos', 'Collier'] 2\n",
       "['Maria', 'Martinez'] 2\n",
-      "['Jeremy', 'Lawson'] 2\n",
+      "['Jeremy', 'Lawson'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['Karen', 'Ford'] 2\n",
       "['Carlos', 'Wiggins'] 2\n",
       "['Brandon', 'Turner'] 2\n",
@@ -35338,13 +35344,7 @@
       "['Michael', 'Lopez'] 2\n",
       "['Jorge', 'Wright'] 2\n",
       "['Steven', 'Schmitt'] 2\n",
-      "['Stephen', 'Bryant'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Stephen', 'Bryant'] 2\n",
       "['Rebecca', 'Howard'] 2\n",
       "['William', 'Flores'] 2\n",
       "['Abigail', 'Johnson'] 2\n",
@@ -37910,7 +37910,13 @@
       "['Michael', 'Williams'] 2\n",
       "['Arthur', 'White'] 2\n",
       "['William', 'Moore'] 2\n",
-      "['Kyle', 'Henry'] 2\n",
+      "['Kyle', 'Henry'] 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['James', 'Floyd'] 2\n",
       "['Sheena', 'Smith'] 2\n",
       "['Alan', 'Watkins'] 2\n",
@@ -37994,13 +38000,7 @@
       "['Michael', 'Moore'] 2\n",
       "['Karen', 'Bolton'] 2\n",
       "['Penny', 'Carter'] 2\n",
-      "['Joseph', 'Lucas'] 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['Joseph', 'Lucas'] 2\n",
       "['Todd', 'Skinner'] 2\n",
       "['Randy', 'Maddox'] 2\n",
       "['Lisa', 'Perez'] 2\n",
@@ -40616,7 +40616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "eebdbd94",
    "metadata": {},
    "outputs": [],
@@ -40627,7 +40627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "1e2e0e9c",
    "metadata": {},
    "outputs": [
@@ -40637,7 +40637,7 @@
        "1530"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40655,7 +40655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "aa2e0426",
    "metadata": {},
    "outputs": [
@@ -40679,7 +40679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "86e839ec",
    "metadata": {},
    "outputs": [
@@ -40703,7 +40703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "d7de0dff",
    "metadata": {},
    "outputs": [
@@ -40771,7 +40771,7 @@
        " 'Troy'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40783,7 +40783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "dddf856f",
    "metadata": {},
    "outputs": [
@@ -40807,7 +40807,7 @@
        " 'V'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40819,7 +40819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "4002c89b",
    "metadata": {},
    "outputs": [],
@@ -40830,8 +40830,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f6408fb1",
+   "execution_count": 32,
+   "id": "a833abd9",
    "metadata": {},
    "outputs": [
     {
@@ -40851,8 +40851,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "84cac274",
+   "execution_count": 33,
+   "id": "c9772ab3",
    "metadata": {},
    "outputs": [
     {
@@ -41016,7 +41016,7 @@
        "9          84  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41027,8 +41027,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e207e94b",
+   "execution_count": 34,
+   "id": "d78f6817",
    "metadata": {},
    "outputs": [
     {
@@ -42037,7 +42037,7 @@
        " ...]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42050,8 +42050,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "3d4c9ef4",
+   "execution_count": 35,
+   "id": "ac23c881",
    "metadata": {},
    "outputs": [
     {
@@ -42060,7 +42060,7 @@
        "151"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42084,7 +42084,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97e595d",
+   "id": "c5c2ce0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41c564af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2995837b",
    "metadata": {},
    "outputs": [],
    "source": []
